@@ -150,27 +150,27 @@
   </module>
 
   <module id="gnome-system-tools-boot">
-    <cvs-directory>gnome-ssystem-tools/doc/boot</cvs-directory>
+    <cvs-directory>gnome-system-tools/doc/boot</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-network">
-    <cvs-directory>gnome-ssystem-tools/doc/network</cvs-directory>
+    <cvs-directory>gnome-system-tools/doc/network</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-services">
-    <cvs-directory>gnome-ssystem-tools/doc/services</cvs-directory>
+    <cvs-directory>gnome-system-tools/doc/services</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-time">
-    <cvs-directory>gnome-ssystem-tools/doc/time</cvs-directory>
+    <cvs-directory>gnome-system-tools/doc/time</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-users">
-    <cvs-directory>gnome-ssystem-tools/doc/users</cvs-directory>
+    <cvs-directory>gnome-system-tools/doc/users</cvs-directory>
     <cvs-branch>HEAD</cvs-branch>
   </module>
 
